github_repos/LIQUID_HIVE_25/k8s/base/namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: liquid-hive
  labels:
    name: liquid-hive
    environment: production
